Fixed icon sizes in the control panel
Fixed: Path node is incorrect in cartoon scale
Improved cartoon mode
Fixed: initial zoom is incorrect
Removed animation and zooming
Added UI for Earth System button
Switched to 4 modes: SP, SPM, PM, Ps
Fixed: Location of "x planet mass" seems inconsistent, sometimes above and sometimes below.
Fixed: Hard to see where "20 planet masses" text overlaps sun body.
# 0.0.05 (46883) Dec 6, 2010
Fixed: "Planet mass" PText is intercepting mouse events.
Fixed: My Planet & Space Station slider icon needs to be bigger
Added a new mode for My Sun, Planet & Earth
Fixed lunar orbit in Sun, Earth & Moon mode
Created space station modes
# 0.0.04 (46625) Nov 29, 2010
Fixed: Sim should start paused, so that the user has to hit play for motion to start
Fixed: Path should only start after user presses "path", not from beginning of simulation
Moved the "Moon" checkbox next to "My Sun & Planet" mode radio button, since that is the only mode in which it can be used
Made mode radio buttons appear in the same place for all canvases
Fixed: Reset all is broken
Made trace disappear after 2 earth years
Removed the phet logo to save vertical space on the control panel
Fixed: In real modes, velocities should not be draggable
Fixed: In real modes, bodies should not be draggable
Fixed: forces not visible in Sun, Earth, Moon mode
Switched to "one canvas per mode" paradigm
Made velocity circles more like "my solar system"
-added a 'v' to the circle
-made the circle gray
-made the vectors go behind planets
-made the 'v' circle go behind vectors
Added arrow icons next to arrow checkboxes
Improved performance of path graphics
Switched to colors in PhetColorScheme
Added a titled border around "show" panel in control panel
Renamed and ordered "show" buttons in control panel
Removed "to scale" button
Initial support for different modes
Fixed: force vectors do not update while the sim is paused
# 0.0.03 (45917) Nov 10, 2010
Added feasibility test for simsharing