@@ -8,6 +8,7 @@ import edu.colorado.phet.common.phetcommon.math.Function;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.model.Property;
 import edu.colorado.phet.common.phetcommon.util.Function2;
+import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.gravityandorbits.view.BodyRenderer;
 import edu.colorado.phet.gravityandorbits.view.PathNode;
 import edu.colorado.phet.gravityandorbits.view.Scale;
@@ -16,7 +17,8 @@ import edu.colorado.phet.gravityandorbits.view.Scale;
  * @author Sam Reid
  */
 public class Body {
-    private final Property<ImmutableVector2D> positionProperty;
+    private final Property<ImmutableVector2D> positionProperty;//physical position
+    private final Property<ImmutableVector2D> scaledPositionProperty;//position accounting for scale (i.e. cartoon or real)
     private final Property<ImmutableVector2D> velocityProperty;
     private final Property<ImmutableVector2D> accelerationProperty;
     private final Property<ImmutableVector2D> forceProperty;
@@ -37,11 +39,13 @@ public class Body {
     private final Body parent;
     private final double cartoonOffsetScale;
     private final Function2<Body, Double, BodyRenderer> renderer;
+    private final Property<Scale> scaleProperty;
 
     public Body( Body parent,//the parent body that this body is in orbit around, used in cartoon mode to exaggerate locations
                  String name, double x, double y, double diameter, double vx, double vy, double mass, Color color, Color highlight,
                  Function.LinearFunction sizer, Function.LinearFunction iconSizer, double cartoonDiameterScaleFactor, double cartoonOffsetScale,
-                 Function2<Body, Double, BodyRenderer> renderer// way to associate the graphical representation directly instead of later with conditional logic or map
+                 Function2<Body, Double, BodyRenderer> renderer,// way to associate the graphical representation directly instead of later with conditional logic or map
+                 final Property<Scale> scaleProperty
     ) {
         assert renderer != null;
         this.parent = parent;
@@ -53,6 +57,7 @@ public class Body {
         this.cartoonDiameterScaleFactor = cartoonDiameterScaleFactor;
         this.cartoonOffsetScale = cartoonOffsetScale;
         this.renderer = renderer;
+        this.scaleProperty = scaleProperty;
         positionProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( x, y ) );
         velocityProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( vx, vy ) );
         accelerationProperty = new Property<ImmutableVector2D>( new ImmutableVector2D( 0, 0 ) );
@@ -60,6 +65,23 @@ public class Body {
         massProperty = new PublicProperty<Double>( mass );
         diameterProperty = new Property<Double>( diameter );
         density = mass / getVolume();
+        scaledPositionProperty = new Property<ImmutableVector2D>( getPosition() );
+
+        //Synchronize the scaled position, which accounts for the scale
+        final SimpleObserver updateScaledPosition = new SimpleObserver() {
+            public void update() {
+                scaledPositionProperty.setValue( getPosition( scaleProperty.getValue() ) );
+            }
+        };
+        scaleProperty.addObserver( updateScaledPosition );
+        positionProperty.addObserver( updateScaledPosition );
+        if ( parent != null ) {
+            parent.positionProperty.addObserver( updateScaledPosition );
+        }
+    }
+
+    public Property<ImmutableVector2D> getScaledPositionProperty() {
+        return scaledPositionProperty;
     }
 
     private double getVolume() {
