@@ -35,6 +35,8 @@ public class GravityAndOrbitsModule extends PiccoloModule {
     private Property<Boolean> showVelocityProperty = new Property<Boolean>( false );
     private Property<Boolean> showMassProperty = new Property<Boolean>( false );
 
+    private Property<Scale> scaleProperty = new Property<Scale>( Scale.CARTOON );
+
     private static final double SUN_RADIUS = 6.955E8;
     private static final double SUN_MASS = 1.989E30;
 
@@ -141,7 +143,7 @@ public class GravityAndOrbitsModule extends PiccoloModule {
             {
                 addBody( earth );
                 addBody( new Body( earth, "Space Station", EARTH_PERIHELION + SPACE_STATION_PERIGEE + EARTH_RADIUS, 0, SPACE_STATION_RADIUS * 2 * 1000, 0,
-                                   SPACE_STATION_SPEED, SPACE_STATION_MASS, Color.gray, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 25000, 1000 * 1.6, IMAGE_RENDERER ) );
+                                   SPACE_STATION_SPEED, SPACE_STATION_MASS, Color.gray, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 25000, 1000 * 1.6, IMAGE_RENDERER, scaleProperty ) );
             }
 
             @Override
@@ -155,21 +157,19 @@ public class GravityAndOrbitsModule extends PiccoloModule {
             }
         } );
     }};
+    private Property<GravityAndOrbitsMode> modeProperty = new Property<GravityAndOrbitsMode>( modes.get( 0 ) );
 
     private Body createMoon( Body earth, double vx, double vy ) {
-        return new Body( earth, "Moon", MOON_X, -MOON_Y, MOON_RADIUS * 2, vx, vy, MOON_MASS, Color.gray, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 1000, 40, SPHERE_RENDERER );
+        return new Body( earth, "Moon", MOON_X, -MOON_Y, MOON_RADIUS * 2, vx, vy, MOON_MASS, Color.gray, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 1000, 40, SPHERE_RENDERER, scaleProperty );
     }
 
     private Body createEarth( Body sun, double vx, double vy ) {
-        return new Body( sun, "Earth", EARTH_PERIHELION, 0, EARTH_RADIUS * 2, vx, vy, EARTH_MASS, Color.blue, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 1000, 1, SPHERE_RENDERER );
+        return new Body( sun, "Earth", EARTH_PERIHELION, 0, EARTH_RADIUS * 2, vx, vy, EARTH_MASS, Color.blue, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 1000, 1, SPHERE_RENDERER, scaleProperty );
     }
 
     private Body createSun() {
-        return new Body( null, "Sun", 0, 0, SUN_RADIUS * 2, 0, 0, SUN_MASS, Color.yellow, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 50, 1, SPHERE_RENDERER );
+        return new Body( null, "Sun", 0, 0, SUN_RADIUS * 2, 0, 0, SUN_MASS, Color.yellow, Color.white, GravityAndOrbitsCanvas.REAL_SIZER, GravityAndOrbitsCanvas.REAL_SIZER, 50, 1, SPHERE_RENDERER, scaleProperty );
     }
-
-    private Property<GravityAndOrbitsMode> modeProperty = new Property<GravityAndOrbitsMode>( modes.get( 0 ) );
-    private Property<Scale> scaleProperty = new Property<Scale>( Scale.CARTOON );
 
     public ArrayList<GravityAndOrbitsMode> getModes() {
         return new ArrayList<GravityAndOrbitsMode>( modes );
